chore: migrate to Biome linter and update dependencies
Phase 1 tooling migration completed:

- Replace ESLint/Prettier with Biome for linting and formatting
- Add eslint-config-biome to disable overlapping ESLint rules
- Configure @eslint-react/eslint-plugin for React rules
- Keep minimal ESLint for rules Biome doesn't cover (React Fast Refresh, Import resolution)
- Update all dependencies (TypeScript, React, Three.js, R3F, Drei)
- Fix WebGPU import path in Simulation.tsx
- Add styled-components theme type definition (src/styled.d.ts)
- Update package scripts: lint, lint:fix, format, format-check, type-check
- Update lint-staged configuration for Biome

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
-  "*.{ts,tsx,js,jsx}": ["eslint", "prettier --list-different"],
-  "*.json": "prettier --list-different",
-  "*.md": "prettier --list-different"
+  "*.{ts,tsx,js,jsx}": ["biome check --write --no-errors-on-unmatched"],
+  "*.json": "biome format --write --no-errors-on-unmatched",
+  "*.md": "biome format --write --no-errors-on-unmatched"
 }
