--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src tests --report-unused-disable-directives --max-warnings 0",
+    "lint": "biome check src tests",
+    "lint:fix": "biome check --write src tests",
+    "format": "biome format --write src/**/*.{ts,tsx}",
+    "format-check": "biome format src/**/*.{ts,tsx}",
+    "type-check": "tsc --noEmit",
     "commit": "git-cz",
-    "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "prepare": "husky install",
-    "format-check": "prettier --check \"src/**/*.{ts,tsx}\"",
+    "preview": "vite preview",
     "test": "jest"
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
-    "@react-three/drei": "^9.88.0",
-    "@react-three/fiber": "^8.15.11",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@tensorflow/tfjs": "^4.16.0",
     "@tensorflow/tfjs-backend-webgpu": "^4.14.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -25,42 +27,45 @@
     "antd": "^5.8.4",
     "idb": "^8.0.0",
     "onnxruntime-web": "^1.16.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rehype-sanitize": "^6.0.0",
     "styled-components": "^6.1.8",
-    "three": "^0.160.0",
+    "three": "^0.169.0",
     "vite": "^5.0.12"
   },
   "devDependencies": {
     "@axe-core/react": "^4.8.3",
     "@babel/preset-react": "^7.23.3",
+    "@biomejs/biome": "^2.3.11",
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^18.5.0",
-    "@eslint-react/eslint-plugin": "^0.10.12",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@types/three": "^0.160.0",
+    "@eslint-react/eslint-plugin": "^2.5.1",
+    "@eslint/compat": "^2.0.0",
+    "@eslint/js": "^9.39.2",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "@types/three": "^0.182.0",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-biome": "^2.1.3",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-react-refresh": "^0.4.26",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.2.4",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.51.0",
     "vite-plugin-glsl": "^1.2.1",
     "vite-plugin-markdown": "^2.2.0"
   },
