--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@eslint-react/eslint-plugin": "^2.5.1",
     "@eslint/compat": "^2.0.0",
     "@eslint/js": "^9.39.2",
+    "@rollup/pluginutils": "^5.3.0",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@types/three": "^0.182.0",
@@ -51,6 +52,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "esbuild": "^0.27.2",
     "eslint": "^8.56.0",
     "eslint-config-biome": "^2.1.3",
     "eslint-config-standard-with-typescript": "^43.0.1",
