--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ant-design/icons": "^5.2.6",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "@tailwindcss/vite": "^4.1.18",
     "@tensorflow/tfjs": "^4.16.0",
     "@tensorflow/tfjs-backend-webgpu": "^4.14.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -30,7 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rehype-sanitize": "^6.0.0",
-    "styled-components": "^6.1.8",
+    "tailwindcss": "^4.1.18",
     "three": "^0.169.0",
     "vite": "^5.0.12"
   },
