--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
+    "@base-ui/react": "^1.0.0",
+    "@fontsource-variable/inter": "^5.2.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@tailwindcss/vite": "^4.1.18",
@@ -25,12 +30,17 @@
     "@tensorflow/tfjs-backend-webgpu": "^4.22.0",
     "@vitejs/plugin-react": "^4.2.1",
     "ajv": "^8.12.0",
-    "antd": "^5.8.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "idb": "^8.0.0",
+    "lucide-react": "^0.562.0",
     "onnxruntime-web": "^1.23.2",
     "react": "^18.3.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "rehype-sanitize": "^6.0.0",
+    "shadcn": "^3.6.2",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "three": "^0.169.0",
     "vite": "^6.0.0"
@@ -67,6 +77,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
     "ts-jest": "^29.1.2",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.51.0",
     "vite-plugin-glsl": "^1.3.1",
