--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
+    "terser": "^5.44.1",
     "ts-jest": "^29.1.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
