--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "format": "biome format --write src/**/*.{ts,tsx}",
     "format-check": "biome format src/**/*.{ts,tsx}",
     "type-check": "tsc --noEmit",
-    "commit": "git-cz",
     "prepare": "husky install",
     "preview": "vite preview",
     "test": "jest"
@@ -19,12 +18,8 @@
   "dependencies": {
     "@base-ui/react": "^1.0.0",
     "@fontsource-variable/inter": "^5.2.8",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-webgpu": "^4.22.0",
@@ -35,34 +30,32 @@
     "idb": "^8.0.0",
     "lucide-react": "^0.562.0",
     "onnxruntime-web": "^1.23.2",
-    "react": "^18.3.1",
+    "react": "^19.2.3",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.2.3",
     "rehype-sanitize": "^6.0.0",
     "shadcn": "^3.6.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "three": "^0.169.0",
+    "three": "0.182.0",
     "vite": "^6.0.0"
   },
   "devDependencies": {
     "@axe-core/react": "^4.8.3",
     "@babel/preset-react": "^7.23.3",
     "@biomejs/biome": "^2.3.11",
-    "@commitlint/cli": "^17.8.1",
-    "@commitlint/config-conventional": "^18.5.0",
+    "@commitlint/cli": "^20.3.0",
+    "@commitlint/config-conventional": "^20.3.0",
     "@eslint-react/eslint-plugin": "^2.5.1",
     "@eslint/compat": "^2.0.0",
     "@eslint/js": "^9.39.2",
     "@rollup/pluginutils": "^5.3.0",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/three": "^0.182.0",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "@vitejs/plugin-react-swc": "^4.0.0",
-    "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0",
     "esbuild": "^0.27.2",
     "eslint": "^8.56.0",
     "eslint-config-biome": "^2.1.3",
@@ -83,10 +76,5 @@
     "typescript-eslint": "^8.51.0",
     "vite-plugin-glsl": "^1.3.1",
     "vite-plugin-markdown": "^2.2.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
