--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": [
-      "vite-plugin-glsl/ext"
-    ],
+    "types": ["vite-plugin-glsl/ext"],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
