--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "biome check src tests",
     "lint:fix": "biome check --write src tests",
     "format": "biome format --write src/**/*.{ts,tsx}",
@@ -25,7 +25,6 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-webgpu": "^4.22.0",
-    "@vitejs/plugin-react": "^4.2.1",
     "ajv": "^8.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -35,48 +34,27 @@
     "react": "^19.2.3",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.2.3",
-    "rehype-sanitize": "^6.0.0",
-    "shadcn": "^3.6.2",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "three": "0.182.0",
     "vite": "^6.0.0"
   },
   "devDependencies": {
-    "@axe-core/react": "^4.8.3",
-    "@babel/preset-react": "^7.23.3",
     "@biomejs/biome": "^2.3.11",
     "@commitlint/cli": "^20.3.0",
     "@commitlint/config-conventional": "^20.3.0",
-    "@eslint-react/eslint-plugin": "^2.5.1",
-    "@eslint/compat": "^2.0.0",
-    "@eslint/js": "^9.39.2",
-    "@rollup/pluginutils": "^5.3.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/three": "^0.182.0",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
     "@vitejs/plugin-react-swc": "^4.0.0",
-    "esbuild": "^0.27.2",
-    "eslint": "^8.56.0",
-    "eslint-config-biome": "^2.1.3",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.26",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
+    "shadcn": "^3.6.2",
     "terser": "^5.44.1",
     "ts-jest": "^29.1.2",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.51.0",
-    "vite-plugin-glsl": "^1.3.1",
-    "vite-plugin-markdown": "^2.2.0"
+    "typescript": "^5.9.3"
   }
 }
