fix: resolve all TypeScript type errors
- Fix ToggleGroup components to use 'multiple' prop instead of 'type'
- Wrap ToggleGroup values in arrays as required by @base-ui/react v1
- Add JSX type imports for React 19 compatibility in NavBar and PerfOverlay
- Fix index type errors in ONNXService by extracting outputName variable
- Export Logger class from utils/logger.ts and use it in regressionMonitor
- Simplify tsconfig architecture by removing tsconfig.node.json
- Remove unused imports from vite.config.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,9 @@
       "@/*": ["./src/*"]
     },
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "types": ["vite/client"]
   },
-  "include": ["src", "tests"],
-  "exclude": ["src/workers/**/*"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "tests", "vite.config.ts"],
+  "exclude": ["src/workers"]
 }
