--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --mode development",
+    "build": "vite build --mode production",
+    "build:dev": "vite build --mode development",
+    "build:prod": "vite build --mode production",
+    "build:standalone": "vite build --mode standalone",
     "lint": "biome check src tests",
     "lint:fix": "biome check --write src tests",
     "format": "biome format --write src/**/*.{ts,tsx}",
@@ -13,6 +16,8 @@
     "type-check": "tsc --noEmit",
     "prepare": "husky install",
     "preview": "vite preview",
+    "preview:prod": "vite preview --mode production",
+    "preview:standalone": "vite preview --mode standalone",
     "test": "jest"
   },
   "dependencies": {
