refactor(workers): introduce ModelWorkerClient for worker communication
Extract Web Worker communication logic into a dedicated ModelWorkerClient
class that provides a type-safe, promise-based API for interacting with
the model worker.

Changes:
- Add ModelWorkerClient class with methods for start, pause, serialize,
  deserialize, updateForce, and terminate operations
- Replace raw Worker.postMessage calls with ModelWorkerClient methods
- Simplify component code by removing message subscription patterns
- Add comprehensive unit tests for ModelWorkerClient
- Convert jest.config.ts to jest.config.cjs for compatibility

This refactor improves code maintainability by:
- Centralizing worker communication protocol
- Providing promise-based async API instead of callback-based messaging
- Reducing boilerplate in UI components
- Making the codebase more testable

Affected components:
- App.tsx: Initialize ModelWorkerClient with worker instance
- ControlBar.tsx: Use client methods instead of postMessage
- DiffusionPlane.tsx: Use client.updateForce method
- IndexedDBRestore/LocalFileRestore: Use client.deserialize
- index.tsx: Remove modelSaveSubs callback pattern

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "preview": "vite preview",
     "preview:prod": "vite preview --mode production",
     "preview:standalone": "vite preview --mode standalone",
-    "test": "jest"
+    "test": "jest --config jest.config.cjs"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
