--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "preview": "vite preview",
     "preview:prod": "vite preview --mode production",
     "preview:standalone": "vite preview --mode standalone",
-    "test": "jest --config jest.config.cjs"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
@@ -53,13 +56,13 @@
     "@types/react-dom": "^19.2.3",
     "@types/three": "^0.182.0",
     "@vitejs/plugin-react-swc": "^4.0.0",
+    "@vitest/ui": "^4.0.16",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
     "shadcn": "^3.6.2",
     "terser": "^5.44.1",
-    "ts-jest": "^29.1.2",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.16"
   }
 }
